Cambios visuales y cors
