# tdi-service-tdis/docs/swagger.json
@@ -63,6 +63,11 @@
         },
         "/api/tdi/catalogo": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Obtiene todas las actividades vigentes con filtros opcionales",
                 "consumes": [
                     "application/json"
